# 2D-Heat-Equation-Using-Finite-Difference-Method-with-CUDA

./: CMakeLists.txt  README.md  interactions.h  kernel.cu  kernel.h  main.cpp
