CMAKE_MINIMUM_REQUIRED(VERSION 3.10)

PROJECT(flashlight)


FIND_PACKAGE(CUDA REQUIRED)
find_package(OpenGL REQUIRED)
find_package(GLUT REQUIRED)

INCLUDE_DIRECTORIES(${CUDA_INCLUDE_DIRS})
INCLUDE_DIRECTORIES(${OPENGL_INCLUDE_DIR})
INCLUDE_DIRECTORIES(${GLUT_INCLUDE_DIR})


LINK_DIRECTORIES(${CUDA_LIBRARIES})
LINK_DIRECTORIES(${OPENGL_LIBRARIES})
LINK_DIRECTORIES(${GLUT_LIBRARIES})

set( OpenGL_GL_PREFERENCE  "GLVND")
set(BUILD_TYPE Release)
set(CUDA_NVCC_FLAGS ${CUDA_NVCC_FLAGS} -gencode arch=compute_30,code=sm_30)
set(CUDA_PROPAGATE_HOST_FLAGS OFF)
 
CUDA_ADD_EXECUTABLE(flashlight main.cpp kernel.h kernel.cu interactions.h)

TARGET_LINK_LIBRARIES(flashlight  ${CUDA_LIBRARIES} ${OPENGL_LIBRARIES} ${GLUT_LIBRARIES})



